--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -177,7 +177,7 @@
 "my.page.contacts.cell.title" = "Contact Address";
 "my.page.mnemonic.cell.title" = "Mnemonic Words";
 "my.page.system.cell.title" = "Settings";
-"my.page.invite.cell.title" = "Mining Invitaion, Premiere Mining";
+"my.page.invite.cell.title" = "Mining Invitation, Premiere Mining";
 "my.page.reward.cell.title" = "Rewards Enquiry";
 "my.page.forum.cell.title" = "Official Forum";
 "my.page.aboutUs.cell.title" = "About Us";
@@ -575,7 +575,7 @@
 "grin.sent.http.success" = "You have successfully sent GRIN transfer request";
 "grin.sent.vite.success" = "Your transaction has sent.";
 "grin.receiveByVite.addressCopyed" = "Your VITE address for receiving GRIN has been copied to the clipboard.";
-"grin.receiveByVite.desc" = "Please share your VITE address(Find it at the bottom) with the sender. Please notice if you open a Vite wallet other than iOS wallet and receive the VITE transaction, you will not be able to receive the transfer, please ask the sender to cancel the transaction and resend.";
+"grin.receiveByVite.desc" = "Please note that web wallet doesn't support native GRIN. If you receive the VITE transaction with GRIN file, you should contact the sender to cancel the transaction and resend GRIN.";
 "grin.iknow" = "I know";
 "grin.thisIsFirstViteAddress" = "This is your first VITE address";
 "grin.receiveByHttp.addressCopyed" = "Your HTTP address for receiving GRIN has been copied to the clipboard";
@@ -621,7 +621,7 @@
 "grin.teach.vite.send.startSend" = "Start to Send";
 "grin.txMethod.http" = "HTTP Address";
 "grin.txMethod.vite" = "VITE Address";
-"grin.txMethod.file" = "File Transaction";
+"grin.txMethod.file" = "Transaction File";
 
 "grin.detail.fromMine" = "Coinbase";
 "grin.detail.txStatus" = "Transaction State";
@@ -1221,6 +1221,27 @@
 "defi.use.page.close.svip" = "撤销交易所SVIP";
 "defi.use.page.regist.sbp" = "注册SBP";
 
+"defi.use.page.edit.sbp.title" = "编辑SBP信息";
+"defi.use.page.edit.sbp.blockProducingAddressTitle" = "出块地址:";
+"defi.use.page.edit.sbp.rewardWithdrawAddressTitle" = "提取奖励地址:";
+"defi.use.page.edit.sbp.confirm" = "确认修改";
+"defi.use.page.edit.sbp.cancle" = "暂不修改";
+"defi.use.page.edit.sbp.cancle.title" = "撤销注册SBP";
+"defi.use.page.edit.can.cancle.Amount" = "可取回抵押金额:";
+"defi.use.page.edit.sbp.cancle.desc" = "撤销后，抵押金额将退回原路；若想成为SBP，您需重新提交注册申请。";
+"defi.use.page.edit.cancle.cancle" = "暂不撤销";
+"defi.use.page.edit.cancle.confirm" = "确认撤销";
+
+"defi.use.page.edit.svip.cancle.title" = "撤销交易所SVIP";
+"defi.use.page.edit.svip.cancle.desc" = "撤销后，将无法享受交易所SVIP特权；抵押金额将退回原路。";
+
+"defi.use.page.edit.quotal.cancle.title" = "取回获取配额抵押";
+"defi.use.page.edit.quotal.cancle.desc" = "取回抵押会影响交易速度；抵押金额将退回原路。确认撤销抵押吗？";
+
+"defi.use.page.edit.minning.cancle.title" = "停止挖矿";
+"defi.use.page.edit.minning.cancle.desc" = "停止挖矿后，需约7天退回抵押金额。停止挖矿将不会再分得VX收益，确定要停止挖矿吗？";
+"defi.use.page.edit.minning.cancle.cancle" = "暂不停止";
+"defi.use.page.edit.minningcancle.confirm" = "确认";
 
 "defi.SubscriptionDetail.SubscriptionAmount" = "认购金额";
 "defi.SubscriptionDetail.TotalAmount" = "借币总金额";
