--- a/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
@@ -1065,16 +1065,34 @@
 "defi.loan.page.cell.duration.approximate" =  "约";
 "defi.loan.page.cell.duration.day" =  "天";
 "defi.loan.page.cell.duration.block" =  "%@个快照块";
-"defi.loan.page.cell.duration.tip" =  "借币成功后需手动操作使用借款，请预留操作时间。例如获取配额需抵押至少约3天时间，借币期限至少4天才可能满足抵押获取配额。另外，预留时间需考虑节点丢块造成的时间和快照块之间的误差。";
+"defi.loan.page.cell.duration.tip" =  "借币成功后需手动操作使用借款，请预留操作时间。使用DeFi资产时，注册SBP需要剩余可用时间大于90天；抵押挖矿需要剩余可用时间大于11天，开通交易所SVIP需要剩余可用时间大于90天，获取配额需要剩余可用时间大于3天。需考虑节点丢块造成的时间和快照块之间的误差。";
 "defi.loan.page.cell.subscription.time.title" =  "认购期";
 "defi.loan.page.cell.subscription.time.unit" =  "天";
-"defi.loan.page.cell.interest.title" =  "应付利息";
-"defi.loan.page.loan.button.title" =  "支付利息发布借币";
+"defi.loan.page.cell.interest.title" =  "应冻结利息";
+"defi.loan.page.loan.button.title" =  "冻结利息发布借币";
+"defi.loan.page.loan.success.toast" =  "发布借币成功";
 
 "defi.loan.page.tip1" =  "借币期限以快照块为准。";
 "defi.loan.page.tip2" =  "认购期内，若成功售罄，自动结束认购，开始计息。";
 "defi.loan.page.tip3" =  "尚无认购时，您可以撤销借币。";
 "defi.loan.page.tip4" =  "认购期结束后，若未成功售罄，可重新发布借币。";
+
+"defi.loan.page.cell.each.amount.error.empty" =  "请输入每份金额";
+"defi.loan.page.cell.each.amount.error.too.small" =  "最少 10 Vite";
+"defi.loan.page.cell.each.amount.error.not.enough" =  "基础余额不足，无法支付利息";
+
+"defi.loan.page.cell.number.error.empty" =  "请输入借币总份数";
+"defi.loan.page.cell.number.error.too.small" =  "借币总份数不能为0";
+
+"defi.loan.page.cell.rate.error.empty" =  "请输入日利率";
+"defi.loan.page.cell.rate.error.too.small" =  "日利率必须大于0%";
+"defi.loan.page.cell.rate.error.too.big" =  "日利率必须小于或等于100%";
+
+"defi.loan.page.cell.duration.error.empty" =  "请输入借币期限";
+"defi.loan.page.cell.duration.error.too.small" =  "借币期限必须大于0";
+
+"defi.loan.page.cell.subscription.time.error.empty" =  "请输入认购期";
+"defi.loan.page.cell.subscription.time.error.illegal" =  "认购期只能是1-7天";
 
 // DeFi Subscription
 "defi.subscription.page.title" =  "我要认购";
