--- a/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
@@ -925,6 +925,9 @@
 "buildin.dex.un.lock.vx.item0.title" = "当前地址";
 "buildin.dex.un.lock.vx.item1.title" = "金额";
 
+"buildin.dex.cancel.stake.function.title" = "取回抵押";
+"buildin.dex.cancel.stake.item0.title" = "当前地址";
+
 // app scheme
 "app.scheme.home.page.busy.header" = "交易确认";
 "app.scheme.home.page.busy.content" = "请确认如下交易信息";
